[gd_scene load_steps=3 format=3 uid="uid://bvmyhxkrwffdm"]

[ext_resource type="Script" uid="uid://cs0nemup3kqri" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="AudioStream" uid="uid://gy4m85hbutmx" path="res://assets/Audio/RETROBIT Vol 1/select1.wav" id="2_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TitleContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_right = 26.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 32

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SNAKE"

[node name="MenuItemContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="MenuItemContainer"]
layout_mode = 2
text = "Play"

[node name="CheckMusicButton" type="CheckButton" parent="MenuItemContainer"]
layout_mode = 2
button_pressed = true
text = "Background Music"

[node name="CheckFoodMusicButton" type="CheckButton" parent="MenuItemContainer"]
layout_mode = 2
button_pressed = true
text = "Food Music"

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ekxnf")
bus = &"SFX"

[connection signal="pressed" from="MenuItemContainer/Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="MenuItemContainer/CheckMusicButton" to="." method="_on_check_music_button_toggled"]
[connection signal="toggled" from="MenuItemContainer/CheckFoodMusicButton" to="." method="_on_check_food_music_button_toggled"]
